--- a/example/src/index.css
+++ b/example/src/index.css
@@ -10,7 +10,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
 }
-P {
+p {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   line-height: 1.6;
   font-weight: 500;
