--- a/example/src/components/app.css
+++ b/example/src/components/app.css
@@ -7,14 +7,19 @@
   text-align: center;
 }
 h1 {
-  font-size: 20px;
-  font-weight: 500;
   margin-top: -30px;
   margin-bottom: 30px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #2196f3;
 }
 article {
   display: block;
   padding: 30px 60px;
   background: #eee;
   border-radius: 8px;
+}
+.npm {
+  display: inline-block;
+  margin: 20px 0 0 0;
 }
